test/kubernetes/e2e/features/port_routing/testdata/gloo-gateway-routing/routing.yaml
# Don't set namespace, apply to test installation namespace
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: example-vs
spec:
  virtualHost:
    domains:
      - "example.com"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: nginx-upstream
